Fixed z layer input width
The width of the input box was overlapping the slider bar in firefox.

--- a/css/app.css
+++ b/css/app.css
@@ -23,8 +23,8 @@
   width: 750px;
 }
 
-#stack-input {
-  width: 80px;
+#depth {
+  width: 70px;
 }
 
 .uuid {
